[package]
name = "streaming_sbdf_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "streaming_sbdf_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
parquet = "56.2.0"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"

[build-dependencies]
cc = "1.1"
